--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -8,6 +8,7 @@
   --color-background-200: hsla(214, 32%, 91%, 1);
   --color-background-300: hsla(220, 33%, 98%, 1);
 
+  --color-neutral-400: hsla(0, 0%, 0%, 1);
   --color-neutral-300: hsla(213, 27%, 84%, 1);
   --color-neutral-200: hsla(210, 40%, 98%, 1);
   --color-neutral-100: hsla(0, 0%, 100%, 1);
