fix: add strict mode to router

--- a/src/app/ui/components/elements/drawer-panel/DrawerPanel.scss
+++ b/src/app/ui/components/elements/drawer-panel/DrawerPanel.scss
@@ -14,7 +14,7 @@
     }
 
     &::backdrop {
-        @apply bg-logo-600 opacity-70;
+        @apply bg-neutral-400 opacity-75;
         @apply transition-transform duration-[--animationTime]
     }
 
