feature: add message to loadingIs abstract component

--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -45,7 +45,7 @@
         }
 
         &[loading=true] {
-            @include crate-spinner(
+            @include create-spinner(
                 $position: absolute,
                 $borderColor: var(--color-neutral-100),
                 $borderBColor: var(--color-outline)
