--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -20,4 +20,5 @@
   --color-outline: hsla(295, 73%, 46%, 1);
   --color-area-100: hsla(173, 80%, 40%, 1);
   --color-area-200: hsla(217, 91%, 60%, 1);
+  --color-area-300: hsla(224, 36%, 86%, 1);
 }
