--- a/src/assets/_abstracts/_colors.scss
+++ b/src/assets/_abstracts/_colors.scss
@@ -21,4 +21,6 @@
   --color-area-100: hsla(173, 80%, 40%, 1);
   --color-area-200: hsla(217, 91%, 60%, 1);
   --color-area-300: hsla(224, 36%, 86%, 1);
+
+  --color-layer: hsla(224, 45%, 22%, .9)
 }
