--- a/src/modules/vacancy/presentation/ui/vacancies-board/VacanciesBoards.scss
+++ b/src/modules/vacancy/presentation/ui/vacancies-board/VacanciesBoards.scss
@@ -5,7 +5,7 @@
     @apply flex h-full gap-xmd overflow-y-hidden;
 
     &__col {
-        @apply flex-[300px] flex-shrink-0 flex-grow-0;
+        @apply flex-[18.75rem] flex-shrink-0 flex-grow-0;
 
         @screen phone {
             @apply flex-grow flex-shrink min-w-full
