--- a/src/app/ui/layouts/partials/section-content/SectionContent.scss
+++ b/src/app/ui/layouts/partials/section-content/SectionContent.scss
@@ -1,6 +1,6 @@
 .section-content {
     $sectioncontent: &;
 
-    @apply flex-[2] px-md py-md;
+    @apply flex-[2] px-md py-md overflow-hidden;
     @apply bg-neutral-100 rounded-xlg shadow-light-center
 }
