feature: add  prop to create-snap-scroll utility

--- a/src/modules/vacancy/presentation/ui/vacancies-board/VacanciesBoards.scss
+++ b/src/modules/vacancy/presentation/ui/vacancies-board/VacanciesBoards.scss
@@ -1,7 +1,7 @@
 .vacancies-boards {
     $vacanciesboards: &;
 
-    @include create-snap-scroll;
+    @include create-snap-scroll($direction: 'x');
     @apply flex h-full gap-xmd overflow-y-hidden;
 
     &__col {
