--- a/src/app/ui/components/tools/draggable-area/DraggableArea.scss
+++ b/src/app/ui/components/tools/draggable-area/DraggableArea.scss
@@ -53,7 +53,8 @@
     }
 
     &__active-zone {
-        @include create-snap-scroll;
+        @include create-snap-scroll($direction: 'y');
+        @apply overflow-x-hidden;
         @apply flex flex-col flex-[2] m-none px-md gap-sm;
     }
 
