--- a/src/assets/mixins/createUtilities.scss
+++ b/src/assets/mixins/createUtilities.scss
@@ -130,8 +130,15 @@
     }
 }
 
-@mixin create-snap-scroll {
-    @apply overflow-auto scroll-smooth snap-x snap-mandatory;
+@mixin create-snap-scroll($direction: 'x') {
+    @apply overflow-auto scroll-smooth snap-mandatory;
+
+    @if $direction == 'y' {
+        @apply snap-y
+    } @else {
+        @apply snap-x
+    }
+
     scrollbar-color: var(--color-area-200, #000) transparent;
     scrollbar-width: thin;
 
