feature: add fallback content with add button to add new applicant in area

--- a/src/app/ui/components/abstracts/component-is/ComponentIs.scss
+++ b/src/app/ui/components/abstracts/component-is/ComponentIs.scss
@@ -2,7 +2,7 @@
     @apply p-none no-underline;
 
     &:is(button) {
-        @apply bg-default-none border-none outline-none select-none; // reset
+        @apply bg-default-none outline-none select-none; // reset
     }
     
 }
