--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -15,6 +15,12 @@
         }
     }
 
+    &--is {
+        &-fullsize {
+            @apply w-full;
+        }
+    }
+
     &[dirty=true] {
         &:has(input:invalid) {
             @apply shadow-invalid
