feature: add fake section description

--- a/src/modules/applicant/presentation/ui/create-form/CreateForm.scss
+++ b/src/modules/applicant/presentation/ui/create-form/CreateForm.scss
@@ -4,6 +4,13 @@
     @apply flex flex-col items-end gap-sm;
 
     &__description {
-        @apply text-sm
+        @apply text-sm;
+        
+        &::v-deep {
+            + * {
+                @apply mt-md
+            }
+        }
+        
     }
 }
