feature: add email regex

--- a/src/app/ui/components/base/base-input/BaseInput.scss
+++ b/src/app/ui/components/base/base-input/BaseInput.scss
@@ -82,6 +82,8 @@
     }
 
     + * {
-        @apply mt-xsm
+        &:is(#{$baseinput}__message) {
+            @apply m-none w-full
+        }
     }
 }
