--- a/src/app/ui/components/abstracts/loading-is/LoadingIs.scss
+++ b/src/app/ui/components/abstracts/loading-is/LoadingIs.scss
@@ -17,13 +17,13 @@
 
     &[type="layer"]{
         --spinner-bg-color: var(--color-neutral-300);
-        --spinner-color: var(--color-logo-400);
+        --spinner-color: var(--color-logo-600);
         
         @apply absolute inset-none p-sm;
         @apply bg-default-layer;
 
         &::before {
-            @apply text-neutral-100
+            @apply text-logo-600
         }
     }
 }
