feature: add all card info

--- a/src/app/ui/components/elements/card-data/CardData.scss
+++ b/src/app/ui/components/elements/card-data/CardData.scss
@@ -29,7 +29,7 @@
     }
 
     &__footer {
-        @apply flex gap-xsm;
+        @apply flex gap-xsm items-center;
         @apply text-logo-300
     }
 
