feature: add default statusID with new value

--- a/src/app/ui/components/abstracts/loading-is/LoadingIs.scss
+++ b/src/app/ui/components/abstracts/loading-is/LoadingIs.scss
@@ -23,7 +23,7 @@
         @apply bg-default-layer;
 
         &::before {
-            @apply text-logo-600
+            @apply text-neutral-100
         }
     }
 }
