--- a/src/app/ui/components/tools/draggable-area/DraggableArea.scss
+++ b/src/app/ui/components/tools/draggable-area/DraggableArea.scss
@@ -66,7 +66,7 @@
 
     &__fallback {
         @apply flex justify-between gap-sm flex-col items-center;
-        @apply text-neutral-400 text-sm;
+        @apply text-logo-300 text-sm font-regular;
     }
 
 }
