refactor: improve button disabled state

--- a/src/modules/applicant/presentation/ui/create-form/CreateForm.scss
+++ b/src/modules/applicant/presentation/ui/create-form/CreateForm.scss
@@ -3,6 +3,12 @@
 
     @apply flex flex-col items-end gap-sm;
 
+    * {
+        &:last-child{
+            @apply mt-md
+        }
+    }
+    
     &__description {
         @apply text-sm;
 
