--- a/src/modules/vacancy/presentation/ui/vacancies-board/VacanciesBoards.scss
+++ b/src/modules/vacancy/presentation/ui/vacancies-board/VacanciesBoards.scss
@@ -2,7 +2,7 @@
     $vacanciesboards: &;
 
     @include create-snap-scroll($direction: 'x');
-    @apply flex h-full gap-xmd overflow-y-hidden;
+    @apply flex h-full gap-xmd overflow-y-hidden scroll-smooth;
 
     &__col {
         @apply flex-[18.75rem] flex-shrink-0 flex-grow-0;
