--- a/src/app/ui/components/base/base-button/BaseButton.scss
+++ b/src/app/ui/components/base/base-button/BaseButton.scss
@@ -15,7 +15,7 @@
         }
     }
 
-    &:not(:disabled) {
+    &:not(:disabled):not([disabled="true"]) {
         &:not([laoding=true]) {
             @apply cursor-pointer;
 
@@ -61,7 +61,8 @@
         }
     }
 
-    &:disabled {
+    &:disabled,
+    &[disabled="true"] {
         @apply bg-neutral-300;
         @apply text-neutral-100
     }
@@ -78,7 +79,7 @@
         }
 
         &-primary {
-            &:not(:disabled) {
+            &:not(:disabled):not([disabled="true"]) {
                 @apply bg-logo-600
             }
 
@@ -86,7 +87,7 @@
         }
 
         &-secondary {
-            &:not(:disabled) {
+            &:not(:disabled):not([disabled="true"]) {
                 @apply bg-neutral-100
             }
 
