refactor: improve scrollIntoView to get user to current area

--- a/src/app/ui/components/elements/toast-event/ToastEvent.scss
+++ b/src/app/ui/components/elements/toast-event/ToastEvent.scss
@@ -16,5 +16,10 @@
         &-error {
             @apply bg-warning-100;
         }
+
+        &-exit {
+            @apply animate-slide-from-right;
+            animation-direction: reverse;
+        }
     }
 }
