test: add entityTypeValueObject unit test

--- a/src/app/ui/components/tools/draggable-area/DraggableArea.scss
+++ b/src/app/ui/components/tools/draggable-area/DraggableArea.scss
@@ -59,14 +59,15 @@
 
         &--is {
             &-empty {
-                @apply items-center justify-center
+                @apply items-center
             }
         }
     }
 
     &__fallback {
-        @apply flex justify-between gap-sm flex-col items-center;
+        @apply flex justify-between gap-sm flex-col items-center mt-auto mb-auto absolute p-md;
         @apply text-logo-300 text-sm font-regular;
+        inset: 50% auto ;
     }
 
 }
