feature: add basic language handler component

--- a/src/app/ui/components/tools/responsive-panel/ResponsivePanel.scss
+++ b/src/app/ui/components/tools/responsive-panel/ResponsivePanel.scss
@@ -41,6 +41,10 @@
         }
     }
 
+    &__footer {
+        @apply w-full
+    }
+
     &__close {
         @include create-hamburger-menu(
             $width: var(--spacing-50),
