refactor: improve visual behaviours

--- a/src/app/ui/components/tools/draggable-area/DraggableArea.scss
+++ b/src/app/ui/components/tools/draggable-area/DraggableArea.scss
@@ -62,6 +62,14 @@
                 @apply items-center
             }
         }
+
+        @media(hover) {
+            &:not(#{$draggablearea}--is-empty) {
+                &:hover {
+                    @apply cursor-ns-resize
+                }
+            }
+        }
     }
 
     &__fallback {
