refactor: restore user scroll

--- a/src/app/ui/components/elements/card-data/CardData.scss
+++ b/src/app/ui/components/elements/card-data/CardData.scss
@@ -47,7 +47,8 @@
         }
 
         &-dragged {
-            @apply opacity-50
+            @apply opacity-50;
+            @apply cursor-wait
         }
     }
 }
