--- a/src/assets/mixins/createUtilities.scss
+++ b/src/assets/mixins/createUtilities.scss
@@ -143,6 +143,12 @@
     scrollbar-color: var(--color-area-200, #000) transparent;
     scrollbar-width: none;
 
+    @media(hover) {
+        &:hover {
+            scrollbar-width: thin;
+        }
+    }
+
     > * {
         @apply snap-start
     }
