--- a/src/app/ui/components/elements/card-data/CardData.scss
+++ b/src/app/ui/components/elements/card-data/CardData.scss
@@ -5,6 +5,10 @@
     @apply bg-neutral-200 rounded-md border-background-200 border-[1px] border-solid;
     @apply font-default;
     
+    > * {
+        @apply pointer-events-none
+    }
+
     &__header {
         @apply flex gap-sm justify-between items-center
     }
