--- a/src/app/ui/components/tools/tabs-shell/TabsShell.scss
+++ b/src/app/ui/components/tools/tabs-shell/TabsShell.scss
@@ -1,5 +1,5 @@
 .tabs-shell {
-    @apply relative flex relative box-border overflow-hidden;
+    @apply relative flex relative box-border overflow-visible;
     @apply font-default;
     padding: 0 24px;
 
